--- a/assets/styles/src/modules/_faculty-single.scss
+++ b/assets/styles/src/modules/_faculty-single.scss
@@ -3,7 +3,7 @@
 	========================================================================== */
 
 .Faculty-single {
-
+	overflow: hidden;
 }
 
 // sits inside of .container
